# trustify-ui

./: .env  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Containerfile  Dockerfile  Dockerfile.server  README.md  biome.json  docker-compose.yaml  entrypoint.sh  eslint.config.mjs  jest.config.ts  package-lock.json  package.json
.devcontainer/: Dockerfile  README.md  generate_devcontainer.sh  template.json
.github/: dependabot.yml
.github/workflows/: backport.yaml  ci-actions.yaml  ci-coverage.yaml  ci-e2e-template.yaml  ci-e2e.yaml  ci-global-template.yaml  ci-global.yaml  ci-image-build.yaml  ci-repo.yaml  image-build.yaml  issues.yaml  nightly-ci-e2e.yaml  nightly-ci-global.yaml  nightly-ci-repo.yaml  pr-checks.yml  pr-closed.yaml  storybook-pr-build.yaml  storybook-pr-deploy.yaml  storybook.yaml  tag-dist.yaml  test.yaml
.storybook/: main.ts  preview.ts  preview.tsx
branding/: strings.json
client/: .gitignore  index.html  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.common.ts  vite.config.dev.ts  vite.config.prod.ts  vite.config.ts
client/config/: jest.config.ts  monacoConstants.ts  openapi-ts.config.ts  (+1 more)
common/: package.json  rollup.config.js  tsconfig.json
crate/: Cargo.toml  build.rs
crate/src/: lib.rs
e2e/: .gitignore  DEVELOPING.md  README.md  package.json  playwright.config.ts
playwright/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
public/: mockServiceWorker.js
server/: package.json  rollup.config.js
(+583 files in other folders)
