[package]
name = "trustify-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
static-files = "0.2.1"
tera = "1.19.1"

[build-dependencies]
anyhow = "1"
static-files = "0.2.1"
walkdir = "2"
